fix(style): remove figcaption margin for alignment (#449)

--- a/src/style/picture.css
+++ b/src/style/picture.css
@@ -29,7 +29,7 @@ figure img {
 }
 
 figure figcaption {
-  margin: 0.5em 0;
+  margin: 0;
   color: var(--vp-c-text-3);
   font-weight: 400;
   font-size: 0.875em;
